# PiperPhonemizeAPI

./: Dockerfile  PRD.md  README.md  pyproject.toml  requirements.txt
.do/: app.yaml
app/: main.py
scripts/: install_espeak.sh
tests/: test_phonemize.py
